transfer-ui (0.3.3.2) unstable; urgency=low

  * Fixes: NB#212280 - COREWEB: /usr/bin/transfer-ui 'QCoreApplication::exec main'

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Tue, 25 Jan 2011 14:55:28 +0530

transfer-ui (0.3.3.1) unstable; urgency=low

  * Fix log file name issues

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Fri, 14 Jan 2011 13:48:41 +0530

transfer-ui (0.3.2.1) unstable; urgency=low

  * Fixes : NB#218474 : %L1/%L2 is displayed incorrectly (%L1 = currently being uploaded,%L2 = total number of files ) after TUI Crash

 -- Jukka Tiihonen <jukka.t.tiihonen@nokia.com>  Fri, 14 Jan 2011 13:45:50 +0530